--- a/package.json
+++ b/package.json
@@ -3,25 +3,48 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset",
+    "setup:db": "cd datasets && python setup_database.py"
   },
   "dependencies": {
+    "@azure/ai-text-analytics": "^5.1.0",
+    "@azure/cognitiveservices-face": "^5.0.0",
+    "@azure/openai": "^2.0.0",
+    "@azure/storage-blob": "^12.28.0",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.0",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.15.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,13 +52,19 @@
     "react-query": "^3.39.0",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.0",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.0"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.0.0",
+    "xlsx": "^0.18.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "prisma": "^5.22.0",
+    "ts-node": "^10.9.1"
   }
 }
